added some projects

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       src="https://kit.fontawesome.com/676dbb370b.js"
       crossorigin="anonymous"
     ></script>
- 
   </head>
   <body>
     <nav>
@@ -86,32 +85,47 @@
         </div>
       </div>
     </section>
-    
+
     <section class="my-services">
       <h2>My Services</h2>
-      <p>Morbi risus elit, fringilla in cursus a, molestie non dui. Nunc accumsan gravida risus, ac semper libero mollis ut.</p>
+      <p>
+        With over four years in this field of Web development, I have acquire
+        skills to handle any kind of problem by using right logic to solve it
+      </p>
       <div class="service-cards">
-          <div class="service-card">
-              <img src="./images/website.png" alt="Back-end Development">
-              <h3>Back-end Development</h3>
-              <p>Vivamus in quam ut felis consectetur imperdiet et sed metus. Nullam tristique scelerisque metus id dignissim.</p>
-              <a href="#">Let's Work Together →</a>
-          </div>
-          <div class="service-card">
-              <img src="./images/backend.png" alt="Front-end Development">
-              <h3>Front-end Development</h3>
-              <p>Vivamus in quam ut felis consectetur imperdiet et sed metus. Nullam tristique scelerisque metus id dignissim.</p>
-              <a href="#">Let's Work Together →</a>
-          </div>
-          <div class="service-card">
-              <img src="./images/social.png" alt="Content Writing">
-              <h3>Content Writing</h3>
-              <p>Vivamus in quam ut felis consectetur imperdiet et sed metus. Nullam tristique scelerisque metus id dignissim.</p>
-              <a href="#">Let's Work Together →</a>
-          </div>
+        <div class="service-card">
+          <img src="./images/website.png" alt="Back-end Development" />
+          <h3>Back-end Development</h3>
+          <p>
+            This project shows creative designs for a job board website, its
+              purpose is to pull IT based jobs from diffrent apis so that Web
+              developers and Software Engineers can apply directly and easily
+          </p>
+          <a href="#">Let's Work Together →</a>
+        </div>
+        <div class="service-card">
+          <img src="./images/backend.png" alt="Front-end Development" />
+          <h3>Front-end Development</h3>
+          <p>
+            This project shows creative designs for an advance AI website, its
+              purpose is to help IT based sectors to study and learn easily
+              while being helped by some data from diffrent apis
+          </p>
+          <a href="#">Let's Work Together →</a>
+        </div>
+        <div class="service-card">
+          <img src="./images/social.png" alt="Content Writing" />
+          <h3>Content Writing</h3>
+          <p>
+            This project shows creative designs for an advance AI website, its
+            purpose is to help IT based sectors to study and learn easily
+            while being helped by some data from diffrent apis
+          </p>
+          <a href="#">Let's Work Together →</a>
+        </div>
       </div>
-  </section>
-  
+    </section>
+
     <section class="project-part">
       <h1>Projects</h1>
       <div class="projcard-container">
@@ -212,5 +226,4 @@
       </div>
     </footer>
   </body>
- 
 </html>
