addded work experience

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </section>
 
     <section class="my-services">
-      <h2>My Services</h2>
+      <h2>My Project</h2>
       <p>
         With over four years in this field of Web development, I have acquire
         skills to handle any kind of problem by using right logic to solve it
@@ -95,31 +95,40 @@
       <div class="service-cards">
         <div class="service-card">
           <img src="./images/website.png" alt="Back-end Development" />
-          <h3>Back-end Development</h3>
+          <h3>Weather App</h3>
           <p>
-            This project shows creative designs for a job board website, its
-              purpose is to pull IT based jobs from diffrent apis so that Web
-              developers and Software Engineers can apply directly and easily
+            Developed a comprehensive Weather App providing real-time weather
+            updates and forecasts. The app integrates with multiple weather APIs
+            to ensure accurate and up-to-date information for any location
+            worldwide. Users can search for their city, save favorite locations,
+            and receive notifications for weather changes. The user interface is
+            designed to be intuitive and visually appealing, with dynamic
+            background changes reflecting current weather conditions.
           </p>
           <a href="#">Let's Work Together →</a>
         </div>
         <div class="service-card">
           <img src="./images/backend.png" alt="Front-end Development" />
-          <h3>Front-end Development</h3>
+          <h3>E-commerce Platform</h3>
           <p>
-            This project shows creative designs for an advance AI website, its
-              purpose is to help IT based sectors to study and learn easily
-              while being helped by some data from diffrent apis
+            Designed and developed a fully functional E-commerce platform
+            enabling users to browse products, add items to the cart, and
+            complete purchases securely. The platform includes a comprehensive
+            admin dashboard for managing products, orders, and users. The user
+            experience is enhanced with a responsive design, fast loading times,
+            and secure payment processing.
           </p>
           <a href="#">Let's Work Together →</a>
         </div>
         <div class="service-card">
           <img src="./images/social.png" alt="Content Writing" />
-          <h3>Content Writing</h3>
+          <h3>Social Web App with Authentication</h3>
           <p>
-            This project shows creative designs for an advance AI website, its
-            purpose is to help IT based sectors to study and learn easily
-            while being helped by some data from diffrent apis
+            Created a Social Web App allowing users to connect, share posts, and
+            engage with others through comments and likes. The app includes a
+            robust authentication system supporting both local sign-ups and
+            social logins (Google, Facebook). User profiles are customizable,
+            and the platform supports real-time notifications and messaging.
           </p>
           <a href="#">Let's Work Together →</a>
         </div>
@@ -127,12 +136,12 @@
     </section>
 
     <section class="project-part">
-      <h1>Projects</h1>
+      <h1>Experience</h1>
       <div class="projcard-container">
         <img src="./images/project1.png" />
         <div class="proj-Description">
           <div class="projdescriptiondetails">
-            <h2><i class="fa-solid fa-1"></i>Job Board Project</h2>
+            <h2><i class="fa-solid fa-1"></i>Web developer at Davet</h2>
             <p>
               This project shows creative designs for a job board website, its
               purpose is to pull IT based jobs from diffrent apis so that Web
@@ -159,7 +168,7 @@
         <img src="./images/project2.png" />
         <div class="proj-Description">
           <div class="projdescriptiondetails">
-            <h2><i class="fa-solid fa-2"></i>Chris Dev Ai</h2>
+            <h2><i class="fa-solid fa-2"></i>Front End developer at Prime Lumisence</h2>
             <p>
               This project shows creative designs for an advance AI website, its
               purpose is to help IT based sectors to study and learn easily
